Edited wiki page through web user interface.

--- a/wiki/DeveloperGuide.wiki
+++ b/wiki/DeveloperGuide.wiki
@@ -3,4 +3,10 @@
 
 = Developer Guide =
 
-TBD.
+* Make sure you have a Subversion Client (e.g. TortoiseSVN)
+* Get code from SVN from https://mismo-bindings.googlecode.com/svn/trunk/ (for authenticated, read-write access) or https://mismo-bindings.googlecode.com/svn/trunk/ (for anonymous, read-only access) to a new directory "mismo-bindings"
+* Make sure you have ANT 1.6 installed and in your path
+* Run "ant" from the new "mismo-bindings" directory where you downloaded the code. This compiles the code and produces JAR files in the "dist" subdirectory.
+* Open the project in your favorite IDE (Eclipse project files are included) and look at the sources under "modules" directory.
+* Try running some tests from one of the "test" directories.
+* If you still have questions, contact us at opensource@sysdelphia.com
